--- a/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/list_item.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/list_item.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Layout for a single list item -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:minHeight="?android:attr/listPreferredItemHeight"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/name_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="lutti" />
+    <ImageView
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
-    <TextView
-        android:id="@+id/number_view"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="one" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingLeft="16dp">
+
+        <TextView
+            android:id="@+id/name_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/number_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
