--- a/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/list_item.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/list_item_icon"
+        android:id="@+id/image"
         android:layout_width="88dp"
         android:layout_height="88dp" />
 
@@ -19,7 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/list_item_icon"
+        android:layout_toRightOf="@id/image"
         android:orientation="vertical"
         android:paddingLeft="16dp">
 
@@ -41,7 +41,11 @@
             android:gravity="top"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white" />
-
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"/>
 
 </RelativeLayout>
