--- a/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/place_list.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/place_list.xml
@@ -3,6 +3,7 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list"
     android:orientation="vertical"
-    android:background="@color/primary_color"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:background="@color/purple_background"
+     />
