--- a/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,16 @@
     android:orientation="vertical"
     tools:context="com.example.visitseattle.MainActivity">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
